   flushes, we use these means to ensure data integrity in
   the presence of volatile disk write caches and power outages.
 * Fixed DRBD to no longer log
   "Sync bitmap getting lost (drbd_bm_set_bits_in_irq: (!b->bm))"
   endlessly after the local disk was lost.
 * Fixed protocol A for BIOs larger than the page size. If you
   hit the bug, DBBD would simply lose connection.
 * Changed state processing so that state changes visible
   via the drbdsetup events interface are always in the right order.
 * Made drbddisk's exit codes more LSB compliant.
 * Back-ported the new drbdmeta to drbd-8.0 (from drbd-8.2).
 * More robustness to the code that establishes connections.

8.0.8 (api:86/proto:86)
--------
 * Improvements to the bitmap code. (The old code might reenabled
   interrupts by accident)
 * Fixed a endian issue in the wirte protocol. C bit-fields are
   might by layed out differently on little/big endian machines.
 * Drbdadm's adjust forgot sometimes to adjust options values that
   where inherited from the common section, fixed that.
 * Removed dopd. It gets (and should be) shipped with heartbeat.
 * When peer authentication is enabled, you could trick drbd to send
   a state report packet before it authenticated itself. Fixed that.
 * Added robustness to resync pause/continue.
 * Drbdsetup should not report a random error if no netlink
   answer is received from the drbd module.
 * Fixes to error code pathes. ( drbd_drain_block() and lc_alloc() )
 * Fixed a possible OOPS in case one manages to loose disk and
   network concurrently. (iSCSI disk and network over same switch)
 * Fixed the broadcasting of state change events to userspace.

8.0.7 (api:86/proto:86)
--------
 * Fixed drbdmeta's conversion of 07 style meta data.
 * Handle the failure of vmalloc() in the bitmap code more gracefully.
 * Do not pause resync on unconfigured devices.
 * Added missing piecos of the implementation of the "pri-lost" handler.
 * Added the "split-brain" handler.