@@ -2,7 +2,7 @@ drbd8 (8.0.9-0) unstable; urgency=low
 
   * New upstream release.
 
- -- Philipp Reisner <phil@linbit.com>  Mon, 4 Feb 2008 11:17:00 +0200
+ -- Philipp Reisner <phil@linbit.com>  Mon, 6 Feb 2008 12:17:00 +0200
 
 drbd8 (8.0.8-0) unstable; urgency=low
 
